# NetworkSynchronizer

./: .gitignore  LICENSE  README.md  SCsub  bit_array.cpp  bit_array.h  config.py  data_buffer.cpp  data_buffer.h  godot_backward_utility_cpp.h  godot_backward_utility_header.h  input_network_encoder.cpp  input_network_encoder.h  interpolator.cpp  interpolator.h  net_action.cpp  net_action.h  net_action_info.cpp  net_action_info.h  net_action_processor.cpp  net_action_processor.h  net_utilities.cpp  net_utilities.h  networked_controller.cpp  networked_controller.h  networked_unit.cpp  networked_unit.h  peer_networked_controller.cpp  peer_networked_controller.h  register_types.cpp  scene_diff.cpp  scene_diff.h  scene_synchronizer.cpp  scene_synchronizer.h  scene_synchronizer_debugger.cpp  scene_synchronizer_debugger.h  snapshot.cpp  snapshot.h
cmake/: CMakeLists.txt
core/: bit_array.cpp  bit_array.h  bitcasts.h  core.cpp  core.h  data_buffer.cpp  data_buffer.h  ensure.cpp  ensure.h  event.h  event_processor.h  fp16.h  insertion_sort.h  net_math.h  net_utilities.cpp  net_utilities.h  network_codec.cpp  network_codec.h  network_interface.cpp  network_interface.h  network_interface_define.h  object_data.cpp  object_data.h  object_data_storage.cpp  object_data_storage.h  peer_data.cpp  peer_data.h  peer_networked_controller.cpp  peer_networked_controller.h  print.cpp  print.h  processor.h  quick_sort.h  scene_synchronizer_debugger.cpp  scene_synchronizer_debugger.h  scene_synchronizer_debugger_json_storage.h  scheduled_procedure.h  snapshot.cpp  snapshot.h  var_data.cpp  (+1 more)
debugger_ui/: cpplize_debugger.py  debugger.py  readme.md
doc_classes/: DataBuffer.xml  GdNetworkedController.xml  GdSceneSynchronizer.xml  InputNetworkEncoder.xml  NetworkedController.xml  SceneDiff.xml  SceneSynchronizer.xml
godot4/: gd_data_buffer.cpp  gd_data_buffer.h  gd_network_interface.cpp  gd_network_interface.h  gd_networked_controller.cpp  gd_networked_controller.h  gd_scene_synchronizer.cpp  gd_scene_synchronizer.h  input_network_encoder.cpp  input_network_encoder.h
tests/: local_network.cpp  local_network.h  local_scene.cpp  local_scene.h  test_AI_simulation.cpp  test_AI_simulation.h  test_data_buffer.cpp  test_data_buffer.h  test_doll_simulation.cpp  test_doll_simulation.h  test_event.cpp  test_event.h  test_interpolator.h  test_math_lib.cpp  test_math_lib.h  test_netsync_bit_array.h  test_netsync_data_buffer.h  test_processor.cpp  test_processor.h  test_scene_synchronizer.cpp  test_scene_synchronizer.h  test_simulation.cpp  test_simulation.h  test_switch_controller.cpp  test_switch_controller.h  tests.cpp  tests.h
